--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -77,6 +77,7 @@
         <item name="android:background">@drawable/shape_corner_button</item>
         <item name="android:textSize">@dimen/text_size_20</item>
         <item name="android:textColor">@color/c_000000</item>
+        <item name="textAllCaps">false</item>
         <item name="android:layout_centerHorizontal">true</item>
     </style>
 
@@ -123,6 +124,5 @@
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_alignParentEnd">true</item>
     </style>
-
 
 </resources>
