--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
     </style>
 
     <style name="loading_theme" parent="Theme.IOSchedd">
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowBackground">@drawable/bg_loading</item>
+        <item name="android:windowBackground">@drawable/loading_splash</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.Fullscreen">
