--- a/app/src/main/res/layout/aty_loading.xml
+++ b/app/src/main/res/layout/aty_loading.xml
@@ -11,6 +11,7 @@
         android:id="@+id/iv_loading_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="fitXY"
         android:layout_centerInParent="true" />
 
     <TextView
