--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,9 +8,10 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
-    <style name="loading_theme" parent="Theme.IOSchedd">
+    <style name="loading_theme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/loading_splash</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 
     <style name="AppTheme.Fullscreen">
