--- a/app/src/main/res/layout/aty_easy_recycle_view_glide_show_content.xml
+++ b/app/src/main/res/layout/aty_easy_recycle_view_glide_show_content.xml
@@ -71,7 +71,21 @@
             app:layout_constraintTop_toBottomOf="@+id/BImageBtn"
             app:srcCompat="@drawable/demo" />
 
-
+        <Button
+            android:id="@+id/EImageBtn"
+            android:layout_width="69dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="获取本地图片"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/AImageBtn"
+            app:layout_constraintVertical_bias="0.015" />
 
 
     </android.support.constraint.ConstraintLayout>
