--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,30 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar" />
-
-    <style name="Theme.IOSchedd" parent="AppTheme">
-        <item name="android:showDividers">none</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- 窗口背景颜色 -->
+        <item name="android:windowBackground">@color/windowBackground</item>
+        <!-- 应用的主要色调，actionBar默认使用该颜色，Toolbar导航栏的底色 -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <!-- 应用的主要暗色调，statusBarColor默认使用该颜色 -->
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <!-- 应用的强调色，CheckBox，RadioButton，SwitchCompat等一般控件的选中效果默认采用该颜色 -->
+        <item name="colorAccent">@color/colorAccent</item>
+        <!-- ActionMode覆盖Actionbar，不顶下来 -->
+        <item name="windowActionModeOverlay">true</item>
         <item name="android:windowContentOverlay">@null</item>
-        <item name="android:background">@android:color/transparent</item>
+        <!-- ActionMode的颜色 -->
+        <item name="actionModeBackground">@color/colorPrimary</item>
     </style>
 
-    <style name="loading_theme" parent="AppTheme">
+  <!--  <style name="loading_theme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/loading_splash</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
+    </style>-->
+
+    <style name="loading_theme" parent="AppTheme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
     <style name="AppTheme.Fullscreen">
