--- a/app/src/main/res/layout/aty_easy_recycle_view_glide_show_content.xml
+++ b/app/src/main/res/layout/aty_easy_recycle_view_glide_show_content.xml
@@ -26,10 +26,11 @@
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:text="AImage"
+            android:textSize="8sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.127" />
+            app:layout_constraintVertical_bias="0.058" />
 
         <Button
             android:id="@+id/BImageBtn"
@@ -37,6 +38,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="28dp"
             android:text="BImage"
+            android:textSize="8sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/AImageBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -47,6 +49,7 @@
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:text="CImage"
+            android:textSize="8sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/BImageBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.11"
@@ -57,6 +60,7 @@
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:text="Button"
+            android:textSize="8sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/CImageBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/CImageBtn" />
@@ -65,27 +69,83 @@
             android:id="@+id/imageView"
             android:layout_width="212dp"
             android:layout_height="193dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/BImageBtn"
+            app:layout_constraintTop_toBottomOf="@+id/FImageBtn"
             app:srcCompat="@drawable/demo" />
 
         <Button
             android:id="@+id/EImageBtn"
-            android:layout_width="69dp"
-            android:layout_height="36dp"
+            android:layout_width="73dp"
+            android:layout_height="43dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="获取本地图片"
+            android:text="获取asset"
+            android:textSize="8sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/AImageBtn"
             app:layout_constraintVertical_bias="0.015" />
+
+        <Button
+            android:id="@+id/FImageBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="196dp"
+            android:text="下载"
+            android:textSize="8sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/BImageBtn" />
+
+        <Button
+            android:id="@+id/GImageBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="46dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="获取SD"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toTopOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/FImageBtn"
+            app:layout_constraintTop_toBottomOf="@+id/CImageBtn"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <Button
+            android:id="@+id/HImageBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="其他"
+            android:textSize="8sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/GImageBtn"
+            app:layout_constraintTop_toBottomOf="@+id/DImageBtn" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 
     </android.support.constraint.ConstraintLayout>
@@ -95,6 +155,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/ll_body"
+        android:layout_marginTop="@dimen/d10"
         app:layout_empty="@layout/item_view_empty"
         app:layout_error="@layout/item_view_error"
         app:layout_progress="@layout/item_view_progress"
