--- a/app/src/main/res/layout/aty_data_binding.xml
+++ b/app/src/main/res/layout/aty_data_binding.xml
@@ -133,6 +133,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="@{employee.isFired?View.VISIBLE:View.GONE}"
                 android:onClick="@{(view)->presenter.onClickListenerBinding(employee)}"
                 android:text="@{String.valueOf(1+2)}" />
 
