添加data banding adapter

--- a/app/src/main/res/layout/frg_open_source.xml
+++ b/app/src/main/res/layout/frg_open_source.xml
@@ -42,49 +42,36 @@
 
             <TextView
                 android:id="@+id/tv_easyRy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_corner_tv_ffeo5d"
-                android:padding="@dimen/d20"
-                android:text="easyRecycler"
-                android:textColor="@color/c_000000"
-                android:textSize="15sp" />
+                style="@style/textViewStyle"
+                android:text="easyRecycler" />
 
 
             <TextView
                 android:id="@+id/tv_easyRyGlide"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/textViewStyle"
                 android:layout_toEndOf="@+id/tv_easyRy"
-                android:background="@drawable/shape_corner_tv_ffeo5d"
-                android:padding="@dimen/d20"
-                android:text="easyRyGlide"
-                android:textColor="@color/c_000000"
-                android:textSize="15sp" />
+                android:text="easyRyGlide" />
 
 
             <TextView
                 android:id="@+id/tv_expend"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/textViewStyle"
                 android:layout_toEndOf="@+id/tv_easyRyGlide"
-                android:background="@drawable/shape_corner_tv_ffeo5d"
-                android:padding="@dimen/d20"
-                android:text="tvExpend"
-                android:textColor="@color/c_000000"
-                android:textSize="15sp" />
+                android:text="tvExpend" />
 
 
             <TextView
                 android:id="@+id/tv_databinding"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/textViewStyle"
                 android:layout_below="@+id/tv_easyRy"
-                android:background="@drawable/shape_corner_tv_ffeo5d"
-                android:padding="@dimen/d20"
-                android:text="data binding"
-                android:textColor="@color/c_000000"
-                android:textSize="15sp" />
+                android:text="data binding" />
+
+            <TextView
+                android:id="@+id/tv_databinding_list"
+                style="@style/textViewStyle"
+                android:layout_below="@+id/tv_easyRy"
+                android:layout_toEndOf="@+id/tv_databinding"
+                android:text="data binding list" />
 
 
         </RelativeLayout>
