--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,11 +16,11 @@
         <item name="actionModeBackground">@color/colorPrimary</item>
     </style>
 
-  <!--  <style name="loading_theme" parent="AppTheme">
-        <item name="android:windowBackground">@drawable/loading_splash</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-    </style>-->
+    <!--  <style name="loading_theme" parent="AppTheme">
+          <item name="android:windowBackground">@drawable/loading_splash</item>
+          <item name="android:windowNoTitle">true</item>
+          <item name="android:windowContentOverlay">@null</item>
+      </style>-->
 
     <style name="loading_theme" parent="AppTheme">
         <item name="android:windowIsTranslucent">true</item>
@@ -137,6 +137,17 @@
         <item name="android:layout_height">@dimen/d25</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_alignParentEnd">true</item>
+    </style>
+
+
+    <style name="textViewStyle">
+        <item name="android:layout_margin">@dimen/d5</item>
+        <item name="android:padding">@dimen/d5</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:background">@drawable/shape_corner_tv_ffeo5d</item>
+        <item name="android:textColor">@color/c_000000</item>
     </style>
 
 </resources>
