--- a/app/src/main/res/layout/aty_define_youku_view.xml
+++ b/app/src/main/res/layout/aty_define_youku_view.xml
@@ -15,18 +15,28 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/rl_header">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab"
-            style="@style/TabLayoutStyle.TabLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true" />
+        <ImageView
+            android:layout_width="350dp"
+            android:layout_height="175dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/vp_define_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/tab" />
+            android:src="@drawable/icon_youku_three" />
+
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="125dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/icon_youku_second" />
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="75dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/icon_youku_first" />
+
 
     </RelativeLayout>
 
