--- a/app/src/main/res/layout/aty_define_youku_view.xml
+++ b/app/src/main/res/layout/aty_define_youku_view.xml
@@ -16,6 +16,37 @@
         android:layout_below="@+id/rl_header">
 
         <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/d200">
+
+            <TextView
+                android:id="@+id/tvBujian"
+                style="@style/textViewStyle"
+                android:text="补间动画" />
+
+            <TextView
+                android:layout_toEndOf="@+id/tvBujian"
+                android:id="@+id/tvShuXing"
+                style="@style/textViewStyle"
+                android:text="属性动画" />
+
+            <TextView
+                android:id="@+id/tvReset"
+                android:layout_toEndOf="@+id/tvShuXing"
+                style="@style/textViewStyle"
+                android:text="补间重置" />
+
+            <ImageView
+                android:id="@+id/ivImage"
+                android:layout_below="@+id/tvBujian"
+                android:src="@drawable/icon_youku_baoxue"
+                android:layout_width="@dimen/d100"
+                android:layout_height="@dimen/d40" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
             android:id="@+id/rl_three"
             android:layout_width="@dimen/d350"
             android:layout_height="@dimen/d175"
@@ -89,6 +120,7 @@
                 android:src="@drawable/icon_youku_2" />
 
             <ImageView
+                android:id="@+id/iv_memu"
                 android:layout_width="@dimen/d40"
                 android:layout_height="@dimen/d40"
                 android:layout_centerHorizontal="true"
