--- a/app/src/main/res/layout/aty_self_define_view.xml
+++ b/app/src/main/res/layout/aty_self_define_view.xml
@@ -26,6 +26,12 @@
             android:layout_toEndOf="@+id/tv_define_old"
             android:text="优酷菜单" />
 
+        <TextView
+            android:id="@+id/tv_define_guang_gao"
+            style="@style/textViewStyle"
+            android:layout_toEndOf="@+id/tv_define_youku"
+            android:text="广告条" />
+
 
     </RelativeLayout>
 
