--- a/app/src/main/res/layout/aty_self_define_view.xml
+++ b/app/src/main/res/layout/aty_self_define_view.xml
@@ -32,6 +32,12 @@
             android:layout_toEndOf="@+id/tv_define_youku"
             android:text="广告条" />
 
+        <TextView
+            android:id="@+id/tv_define_down_list"
+            style="@style/textViewStyle"
+            android:layout_toEndOf="@+id/tv_define_guang_gao"
+            android:text="下拉框" />
+
 
     </RelativeLayout>
 
