--- a/app/src/main/res/layout/aty_define_down_list_view.xml
+++ b/app/src/main/res/layout/aty_define_down_list_view.xml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/etInput"
+    <include layout="@layout/include_header" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/d20"
-        android:hint="请输入内容"
-        android:maxLines="1"
-        android:paddingEnd="@dimen/d40" />
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/ivDown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/etInput"
-        android:layout_alignEnd="@+id/etInput"
-        android:padding="@dimen/d5"
-        android:src="@drawable/icon_down" />
+        <EditText
+            android:id="@+id/etInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/d20"
+            android:ellipsize="middle"
+            android:hint="请输入内容"
+            android:paddingEnd="@dimen/d40"
+            android:singleLine="true" />
+
+        <ImageView
+            android:id="@+id/ivDown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/etInput"
+            android:layout_alignEnd="@+id/etInput"
+            android:padding="@dimen/d5"
+            android:src="@drawable/icon_down" />
 
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</LinearLayout>
