--- a/app/src/main/res/layout/aty_data_binding_list.xml
+++ b/app/src/main/res/layout/aty_data_binding_list.xml
@@ -18,7 +18,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/include_header"/>
+        <include
+            android:id="@+id/include_header"
+            layout="@layout/include_databing_header" />
 
         <Button
             android:layout_width="match_parent"
