--- a/app/src/main/res/layout/aty_easy_recycle_view_glide_show_content.xml
+++ b/app/src/main/res/layout/aty_easy_recycle_view_glide_show_content.xml
@@ -147,6 +147,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/EImageBtn"
+            app:srcCompat="@drawable/icon_youku_2" />
+
 
     </android.support.constraint.ConstraintLayout>
 
