--- a/app/src/main/res/layout/include_header.xml
+++ b/app/src/main/res/layout/include_header.xml
@@ -13,8 +13,8 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:background="@color/transparent"
-        android:paddingEnd="@dimen/d10"
         android:paddingStart="@dimen/d10"
+        android:paddingEnd="@dimen/d10"
         android:src="@drawable/icon_btn_back_black"
         android:visibility="gone" />
 
@@ -34,30 +34,48 @@
         tools:text="标题" />
 
 
-    <ImageButton
-        android:id="@+id/ib_header_right"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:background="@color/transparent"
-        android:paddingEnd="@dimen/d10"
-        android:paddingStart="@dimen/d10"
-        android:src="@drawable/icon_btn_share"
-        android:visibility="gone" />
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/ib_header_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:paddingStart="@dimen/d10"
+            android:paddingEnd="@dimen/d10"
+            android:src="@drawable/icon_btn_share"
+            android:visibility="gone" />
 
 
-    <ImageButton
-        android:id="@+id/ib_call_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:background="@color/transparent"
-        android:paddingEnd="@dimen/d10"
-        android:paddingStart="@dimen/d10"
-        android:src="@drawable/icon_call_phone"
-        android:visibility="gone" />
+        <TextView
+            android:id="@+id/tv_header_right"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/d48"
+            android:gravity="center"
+            android:paddingEnd="@dimen/d8"
+            android:textColor="@color/c_444444"
+            android:textSize="@dimen/text_size_16"
+            android:visibility="gone"
+            tools:ignore="RtlSymmetry"
+            tools:text="右边"
+            tools:visibility="visible" />
+
+        <ImageButton
+            android:id="@+id/ib_call_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:paddingStart="@dimen/d10"
+            android:paddingEnd="@dimen/d10"
+            android:src="@drawable/icon_call_phone"
+            android:visibility="gone" />
+    </LinearLayout>
 
 
     <ImageView
