--- a/app/src/main/res/layout/frg_open_source.xml
+++ b/app/src/main/res/layout/frg_open_source.xml
@@ -74,16 +74,22 @@
                 android:text="data binding list" />
 
             <TextView
-                android:id="@+id/tv_notification"
+                android:id="@+id/tv_databinding_expression"
                 style="@style/textViewStyle"
                 android:layout_below="@+id/tv_easyRy"
                 android:layout_toEndOf="@+id/tv_databinding_list"
+                android:text="data binding list" />
+
+            <TextView
+                android:id="@+id/tv_notification"
+                style="@style/textViewStyle"
+                android:layout_below="@+id/tv_databinding"
                 android:text="通知8.0" />
 
             <TextView
                 android:id="@+id/tv_html"
                 style="@style/textViewStyle"
-                android:layout_below="@+id/tv_easyRy"
+                android:layout_below="@+id/tv_databinding"
                 android:layout_toEndOf="@+id/tv_notification"
                 android:text="html" />
 
@@ -91,6 +97,7 @@
                 android:id="@+id/tv_html_qb"
                 style="@style/textViewStyle"
                 android:layout_below="@+id/tv_databinding"
+                android:layout_toEndOf="@+id/tv_html"
                 android:text="htmlqb" />
 
 
